# XLang

./: Cargo.toml  README.md
compiler/: Cargo.toml
compiler/src/: ast.rs  borrowck.rs  builtins.rs  codegen.rs  codegen_cranelift.rs  comptime.rs  debug.rs  diag.rs  lib.rs  library_build.rs  loader.rs  memory.rs  opt.rs  parser.rs  pipeline.rs  runtime_args.rs  typecheck.rs
compiler/src/codegen/: builtins_runtime.rs  ffi.rs
examples/: cli_args.x  comptime_inline.x  for_range.x  friendly.x  hello.x  hello_patch.x  hello_patch_breaking.x  if_bool.x  if_is_advanced.x  if_string.x  input_echo.x  libmath.x  modules_main.x  modules_math.x  ops.x  pointer_guard.x  qol.x  step_loop.x  string_qol.x  strings_and_mod.x  thread_demo.x
runtime/: Cargo.toml
runtime/src/: lib.rs
tools/cli/: Cargo.toml
tools/cli/src/: commands.rs  main.rs  output.rs
tools/docmaker/: Cargo.toml
tools/docmaker/src/: main.rs
